Fix notification z-index and scroll on minicart open

--- a/components/Notification/Notification.module.scss
+++ b/components/Notification/Notification.module.scss
@@ -15,4 +15,5 @@
     margin-right: 10%;
     font-family: Montserrat;
     font-size: 17px;
+    z-index: 2;
 }
